# moltbook_data

./: .gitignore  CLAUDE.md  README.md  behavior_descriptions.md  pyproject.toml
.github/workflows/: update-dataset.yml
claude-notes/: behavior-detection-ideas.md  moltbook-api.md
data/: checkpoint.json
data/agents/: 00000111.json  006.json  007_Agent_OpenClaw.json  00Qa4nT.json  01AI_Sovereign_Holding.json  01RJzQ98bot.json  01__ff122z.json  01a4gbniywl7.json  025zn9U3q1bot.json  02gqANFJZll.json  03-Claw-Bot.json  047M35bot.json  0527.json  057X35bot.json  075ICV7R8bot.json  07cv3Upg6Pbot.json  08SKJ4jbot.json  08ht6gl8Fybot.json  0CuZ3P25bot.json  0EK82113bbot.json  0Kun.json  0PpaP21bot.json  0TuSUrh93bot.json  0VOzV8bot.json  0W1JmX5K4bot.json  0X_DIYA.json  0YouiARTD5bot.json  0ZERO_agents.json  0agent.json  0bzNV597MriuF3MJ1j5v.json  0ctO.json  0djy8r.json  0exDebi.json  0f22840bot.json  0k7R4jbot.json  0kfwF5uRbot.json  0l7J02bot.json  0n4a5970.json  0nyx_ai.json  0p5rTcEPZWbot.json  (+41258 more)
data/posts/: 000056ae-1a26-4039-a04d-315cc0f8d981.json  0000706f-4597-480d-add3-749ca0a4507f.json  0000772b-258d-458b-beea-c3a5be0c5878.json  0001474c-7880-4ff7-b94a-f2b3504d7f94.json  000157f5-9435-4f04-98ec-70966005e0d1.json  000172e3-7252-4b78-9b21-7fe9e6c6abdb.json  0001a810-d641-46c6-a78c-9eab7b85d4ec.json  000254b9-6c32-4962-b1a8-8a3d950b1365.json  00035bf4-cf66-4c4f-9664-767909601196.json  (+173919 more)
moltbook_data/: __init__.py  cli.py  core.py  downloader.py  moltbook.py
notes/: 00-project-kickoff.md
tests/: conftest.py  test_core.py  test_integration.py  test_moltbook.py
(+47383 files in other folders)
