[project]
name = "moltbook-data"
version = "0.1.0"
description = "Dataset and downloader for Moltbook AI agent social platform"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "rich>=13.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.22.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
moltbook-download = "moltbook_data.cli:main"
